# recipe-app-api-devops

./: .bandit.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose-proxy.yml  docker-compose.yml  pyproject.toml  requirements.txt  yoyo.ini
app/: main.py
app/api/: models.py  serializers.py  urls.py  views.py
app/api/migrations/: 0001_initial.py
app/app/: settings.py  urls.py
app/db/: dal.py  db_entities.py
app_deprecated/api/: models.py  serializers.py  urls.py  views.py
app_deprecated/api/migrations/: 0001_initial.py
app_deprecated/app/: settings.py  urls.py
client/: package.json
deploy/: bastion.tf  database.tf  dns.tf  docker-compose.yml  ecs.tf  load_balancer.tf  main.tf  network.tf  outputs.tf  s3.tf  variables.tf
migrations/: 20230106_01_INgsd.sql
scripts/: entrypoint.sh
