[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["David Ashley <david-ashley@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1"
fastapi-sqlalchemy = "^0.2.1"
pydantic = "^1.10.4"
alembic = "^1.9.1"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^0.21.0"
fastapi = "^0.88.0"
pony = "^0.7.16"
yoyo-migrations = "^8.2.0"

[tool.poetry.group.dev.dependencies]
moto = "^2.0.5"
mypy = "^0.991"
pytest = "^6.1.1"
pre-commit = "^2.7.1"
isort = "^5.6.4"
pytest-cov = "^2.10.1"
bandit = "^1.6.2"
flake8 = "^3.8.4"
pytest-env = "^0.6.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
